# dyna-frp

./: .gitignore  Makefile  README.md  config.yaml  index.html  index.md  index.xml  sitemap.xml  stack.yaml
.github/workflows/: gh-pages.yml
app/: Main.hs
content/: paper.md
content/dyna-brick/: tutorial-toc.md
content/dyna-brick/tutorial/: 00-intro.md  01-puzzle-15.md  101-reference.md
content/dyna-core/: get-started.md  tutorial-toc.md
content/dyna-core/tutorial/: 01-intro.md  02-event-streams.md  03-event-game-example.md  04-dynamics.md  05-backbone-monad.md  06-control-flow.md  07-make-bindings.md  08-parser.md  09-conclusion.md  101-reference.md  102-resources.md
content/dyna-gloss/: tutorial-toc.md
content/dyna-gloss/tutorial/: 00-intro.md  01-example.md  101-reference.md
content/dyna-processing/: tutorial-toc.md
content/dyna-processing/tutorial/: 00-intro.md  01-example.md  101-reference.md
css/: style.min.e783507bb360b9f98a5ed4a121403993a693ea14a1af9420b35e040e776c22f8.css
dyna/: ChangeLog.md  README.md  dyna.cabal
dyna-brick/: ChangeLog.md  README.md  dyna-brick.cabal  index.xml
dyna-brick/examples/: Hello.hs  HelloBrick.hs  Puzzle15.hs  ReadChars.hs
dyna-brick/src/Dyna/: Brick.hs
dyna-brick/src/Dyna/Brick/: Frp.hs  Run.hs  Types.hs
dyna-brick/tutorial/: 00-intro.md  101-reference.md
dyna-brick/tutorial-toc/: index.html
dyna-brick/tutorial/00-intro/: index.html
dyna-brick/tutorial/01-puzzle-15/: index.html
dyna-brick/tutorial/101-reference/: index.html
dyna-core/: index.xml
dyna-core/get-started/: index.html
dyna-core/tutorial-toc/: index.html
dyna-core/tutorial/01-intro/: index.html
dyna-core/tutorial/02-event-streams/: index.html
dyna-core/tutorial/03-event-game-example/: index.html
dyna-core/tutorial/04-dynamics/: index.html
dyna-core/tutorial/05-backbone-monad/: index.html
dyna-core/tutorial/06-control-flow/: index.html
dyna-core/tutorial/07-make-bindings/: index.html
dyna-core/tutorial/08-parser/: index.html
dyna-core/tutorial/09-conclusion/: index.html
dyna-core/tutorial/101-reference/: index.html
dyna-core/tutorial/102-resources/: index.html
dyna-gloss/: ChangeLog.md  README.md  dyna-gloss.cabal  index.xml
dyna-gloss/examples/: Ball.hs  Ball01.hs  Ball02.hs  Ball03.hs  Clock.hs  HelloGloss.hs  Line.hs  SolarSystem.hs
dyna-gloss/src/Dyna/: Gloss.hs
dyna-gloss/src/Dyna/Gloss/: Frp.hs  Run.hs  Types.hs
dyna-gloss/src/Dyna/Gloss/Data/: Picture.hs  Point.hs  Vec.hs
dyna-gloss/src/Dyna/Gloss/Geometry/: Line.hs
dyna-gloss/tutorial/: 00-intro.md  01-example.md  101-reference.md
dyna-gloss/tutorial-toc/: index.html
dyna-gloss/tutorial/00-intro/: index.html
dyna-gloss/tutorial/01-example/: index.html
dyna-gloss/tutorial/101-reference/: index.html
dyna-processing/: ChangeLog.md  README.md  dyna-processing.cabal  index.xml
dyna-processing/examples/: Ball.hs  HelloProc.hs
dyna-processing/src/Dyna/: Proc.hs
dyna-processing/src/Dyna/Proc/: Frp.hs  Run.hs  Types.hs
dyna-processing/tutorial/: 00-intro.md  01-example.md  101-reference.md
dyna-processing/tutorial-toc/: index.html
dyna-processing/tutorial/00-intro/: index.html
dyna-processing/tutorial/01-example/: index.html
dyna-processing/tutorial/101-reference/: index.html
dyna/examples/: InputForm.hs  RockPaperScissors.hs
dyna/src/: Dyna.hs
dyna/src/Dyna/: Ref.hs
dyna/tutorial/: 00-intro.md  01-event-streams.md  03-event-game-example.md  04-dynamics.md  05-backbone-monad.md  06-control-flow.md  07-make-bindings.md  08-parser.md  09-conclusion.md  101-reference.md  102-resuorces.md
images/: channel-evt.odg  fix-evt.odg  iterate-evt.odg  run-evt.odg  switch-events.odg  switch-evts.odg
images/sources/: channel-evt.odg  fmap-events.odg  hold.odg  monoid-events.odg  once.odg  run-evt-no-header.odg  switch-evts.odg
paper/: index.html
resources/_gen/assets/sass/: style.sass_5ad6f408b0e3e473c748aac88af0ea18.content  style.sass_cf66e63debe6917c04534d6c7b66f623.json
static/images/sources/: filter-evt.odg  fix-evt.odg  fmap-behavior.odg  fmap-dyn.odg  fmap-evt.odg  iterate-evt.odg  map-maybe-evt.odg  monoid-evt.odg  new-evt.odg  run-evt.odg  stepper.odg  switch-behavior.odg  switch-dyn.odg  switch-evt.odg
