cabal-version: 1.12

name:           dyna-brick
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/dyna-brick#readme>
homepage:       https://github.com/githubuser/dyna-brick#readme
bug-reports:    https://github.com/githubuser/dyna-brick/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/dyna-brick

library
  exposed-modules:
      Dyna.Brick
  other-modules:
      Paths_dyna_brick
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , dyna
    , lifted-base
    , mtl
    , monad-control
    , unagi-chan
    , transformers-base
    , brick
    , vty
  default-language: Haskell2010
  default-extensions:
    GADTs
    RankNTypes
    LambdaCase
    FlexibleContexts
    FlexibleInstances
    ExistentialQuantification
    TypeApplications
    TypeFamilies
    TupleSections
    GeneralizedNewtypeDeriving
    UndecidableInstances
    ImportQualifiedPost
    MultiParamTypeClasses
    RecordWildCards

test-suite dyna-brick-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_dyna_brick
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dyna-brick
  default-language: Haskell2010
