cabal-version: 1.12

name:           dyna-gloss
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/dyna-gloss#readme>
homepage:       https://github.com/githubuser/dyna-gloss#readme
bug-reports:    https://github.com/githubuser/dyna-gloss/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/dyna-gloss

library
  exposed-modules:
      Dyna.Gloss
      Dyna.Gloss.Data.Picture
      Dyna.Gloss.Data.Point
      Dyna.Gloss.Data.Vec
      Dyna.Gloss.Geometry.Line
      Dyna.Gloss.Frp
      Dyna.Gloss.Run
  other-modules:
      Dyna.Gloss.Types
      Paths_dyna_gloss
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , Boolean
    , dyna
    , gloss
    , lifted-base
    , monad-control
    , mtl
    , stm
    , temporal-media
    , time
    , transformers-base
    , vector-space
    , unagi-chan
    , random
    , MonadRandom
  default-language: Haskell2010
  default-extensions:
    GADTs
    RankNTypes
    LambdaCase
    FlexibleContexts
    FlexibleInstances
    ExistentialQuantification
    MultiParamTypeClasses
    TypeApplications
    TypeFamilies
    TupleSections
    GeneralizedNewtypeDeriving
    UndecidableInstances
    ImportQualifiedPost
    RecordWildCards


test-suite dyna-gloss-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_dyna_gloss
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dyna-gloss
  default-language: Haskell2010
