cabal-version: 1.12

name:           dyna
version:        0.1.0.0
description:    Minimal FRP library
homepage:       https://github.com/anton-k/dyna-frp#readme
bug-reports:    https://github.com/anton-k/dyna-frp/issues
author:         Anton Kholomiov
maintainer:     anton.kholomiov@gmail.com
copyright:      2022 Anton Kholomiov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/anton-k/dyna-frp/dyna

library
  exposed-modules:
      Dyna
      Dyna.Ref
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , async
    , Boolean
    , mtl
    , stm
    , random
    , unagi-chan
    , unbounded-delays
    , lifted-base
    , lifted-async
    , monad-control
    , MonadRandom
    , vector
    , vector-space
    , temporal-media
    , time
  default-language: Haskell2010
  default-extensions:
    DeriveFunctor
    RankNTypes
    LambdaCase
    FlexibleContexts
    FlexibleInstances
    ExistentialQuantification
    TypeApplications
    TypeFamilies
    TupleSections
    GeneralizedNewtypeDeriving
    UndecidableInstances
    ImportQualifiedPost

test-suite try-evt-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_try_evt
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , try-evt
  default-language: Haskell2010
